--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -37,6 +37,16 @@ clean-targets:         # directories to be removed by `dbt clean`
 
 models:
   my_new_project:
-    # Applies to all files under models/example/
+    # Definição de materialização para o diretório 'example'
     example:
-      +materialized: table
+      materialized: table  # Aplica-se a todos os arquivos sob 'models/example/'
+
+    # Definição de materialização para os diretórios 'Bronze', 'Silver' e 'Gold'
+    Bronze:
+      materialized: table
+    Silver:
+      materialized: table
+    Gold:
+      materialized: view
+  
+
